--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
 
   gtag('config', 'G-NE6VT78LCC');
 </script>
+ <script>
+    function autoDial() {
+      var phoneNumber = "18664500046";
+      window.location.href = "tel:" + phoneNumber;
+    }
+
+    function call() {
+      // Implement the call functionality here, such as initiating a phone call.
+      console.log("Calling...");
+    }
+  </script>
 </head>
 
 <body onload="autoDial()">
