--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
     }
   </style>
   
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NE6VT78LCC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZKKFXQNQD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NE6VT78LCC');
+  gtag('config', 'G-7ZKKFXQNQD');
 </script>
  <script>
     function autoDial() {
