--- a/index.html
+++ b/index.html
@@ -51,26 +51,17 @@
       margin-top: 50px;
     }
   </style>
-  <script>
-        function callSupport() {
-            // Replace 'your-phone-number' with the actual support phone number
-            var phoneNumber = '+18664500046';
-            
-            // Using the 'tel' protocol to initiate a call
-            window.location.href = 'tel:' + phoneNumber;
-        }
-    </script>
-	
-	<script>
-        // Automatically initiate a call when the page loads
-        window.onload = function() {
-            // Replace 'your-phone-number' with the actual support phone number
-            var phoneNumber = '+18664500046';
-            
-            // Using the 'tel' protocol to initiate a call
-            window.location.href = 'tel:' + phoneNumber;
-        };
-    </script>
+ <script>
+    function autoDial() {
+      var phoneNumber = "18664500046";
+      window.location.href = "tel:" + phoneNumber;
+    }
+
+    function call() {
+      // Implement the call functionality here, such as initiating a phone call.
+      console.log("Calling...");
+    }
+  </script>
 </head>
 
 <body onload="autoDial()">
